Bump language level to 22