@@ -132,11 +132,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.14.0</version>
                 <configuration>
-                    <source>19</source>
-                    <target>19</target>
-                    <compilerArgs>
-                        --enable-preview
-                    </compilerArgs>
+                    <source>22</source>
+                    <target>22</target>
                 </configuration>
             </plugin>
             <plugin>
